icon on iphone fix

--- a/cri/styles.css
+++ b/cri/styles.css
@@ -22,6 +22,10 @@ body, html {
 }
 
 
+.contact-name {
+  font-family: "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji", sans-serif;
+  font-size: 1.2em;
+}
 
 .contact-button {
     border: 1px solid black;
